Many fixes
- Fixed the scrollbar background on /movies
- Fixed the blur at the top of the sidebar
- Modified the default background color to black to avoid white flashes

--- a/static/base.css
+++ b/static/base.css
@@ -11,10 +11,10 @@
 
 
 body {
-    /* background-image: linear-gradient(to bottom right, #2961aa, #26205e); */
-    background-image: url("/static/assets/img/wallhaven-83ogv2.png");
+    background-color: black;
     margin: 0;
     padding: 0;
+    background-image: url("/static/assets/img/wallhaven-83ogv2.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -405,6 +405,7 @@ footer ul li a:hover {
     background-color: rgba(0, 0, 0, 0.5);
     height: 100vh;
     width: 60px;
+    margin-top: 60px;
     position: fixed;
     top: 0;
     left: 0;
